[package]
name = "libp2p-webrtc"
version = "0.1.0"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
description = "WebRTC transport for libp2p"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wngr/libp2p-webrtc"
homepage = "https://github.com/wngr/libp2p-webrtc"
documentation = "https://docs.rs/libp2p-webrtc"
keywords = ["webrtc", "libp2p", "transport"]
readme = "README.md"

[dependencies]
anyhow = "1.0.44"
async-stream = "0.3.2"
http = "0.2.5"
libp2p = { version = "0.40.0", default-features = false }
log = "0.4.14"
pin-project = "1.0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-datachannel = "0.2.1"
async-tungstenite = { version = "0.15.0", features = ["tokio", "tokio-openssl"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread" ] }
tokio-stream = "0.1.7"
parking_lot = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-datachannel-wasm = "0.1.1"
#getrandom = { version = "0.2.3", features = ["js"] }
#ed25519-dalek = { version = "1.0.1", default-features = false }
send_wrapper = { version = "0.5.0", features = ["futures"] }
libp2p = { version = "0.40.0", features = ["wasm-bindgen"], default_features = false }
#rand = { version = "0.7.3", features = ["wasm-bindgen"] }
ws_stream_wasm = "0.7.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tracing-subscriber = "0.2.24"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.28"
wasm-bindgen-test = "0.3.28"

[patch.crates-io]
async-datachannel = { path = "../async-datachannel/native" }
async-datachannel-wasm = { path = "../async-datachannel/wasm" }
libp2p = { git = "https://github.com/wngr/rust-libp2p", branch = "ow/wasm" }
instant = { git = "https://github.com/wngr/instant" }

[dev-dependencies]
libp2p = { version = "0.40.0", features = ["ping", "noise", "mplex", "yamux"], default_features = false }
